--- a/style_mobil.css
+++ b/style_mobil.css
@@ -1,8 +1,8 @@
 *{
     font-family: "Mulish", sans-serif;
     font-optical-sizing: auto;
-    font-weight: <weight>;
     font-style: normal;
+    flex-wrap: wrap;
 }
 
 main{
@@ -15,11 +15,13 @@ main{
     
 }
 article {
-    align-content:flex-start;
-    padding: 10px;
-    gap: 10px;
-
-  }
+    align-content: space-around;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    padding: 20px;
+    gap: 20px;
+}
 
 #Titulo{
     font-size: 40px;
@@ -28,7 +30,8 @@ article {
     width: 100%; 
     margin: auto;
     color: #21193C;
-    gap: 10px;
+    gap: 20px;
+    padding: 20px;
 }
 
 section {
